Tambahan dr Isna

--- a/responsive.css
+++ b/responsive.css
@@ -1,1 +1,14 @@
-
+/* Untuk Tablet */
+@media all and (max-width: 1000px) {
+    .list{
+      margin-bottom:30px;
+    }
+  
+  }
+  
+  /* Untuk Smartphone */
+  @media all and (max-width: 670px) {
+    .list{
+      margin-bottom:40px;
+    }
+  }
