--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,184 @@
-
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      padding: 0;
+  }
+  main{
+    height: 500px;
+  }
+  
+  #header {
+      height: 70px;
+      width: 100%;
+      background-color: rgba(21, 180, 42, 0.9);
+    }
+  
+  .header-left {
+      float: left;
+      text-align: center;
+  }
+  
+  .header-right {
+      float: right;
+  }
+  
+  .logo {
+      width: 124px;
+      margin-top: 20px;
+      color: rgb(255, 255, 255);
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+      font-size: 20px;
+  }
+  
+  .header-right a {
+      line-height: 65px;
+      padding: 0 25px;
+      color: white;
+      display: block;
+      float: left;
+      transition: all 0.5s;
+      text-decoration: none;
+  }
+  
+  .header-right a:hover {
+      background-color: rgba(255, 255, 255, 0.3);
+  }
+  
+  .fa {
+      margin-right: 5px;
+  }
+  
+  .menu-icon {
+      color: white;
+      float: right;
+      font-size: 25px;
+      padding: 21px 0;
+      display: none;
+    }
+  
+  #content {
+      float: left;
+      width: 75%;
+  }
+  
+  aside {
+      float: right;
+      width: 25%;
+      padding-left: 20px;
+  }
+  
+  .card {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      border-radius: 5px;
+      padding: 20px;
+      margin-top: 20px;
+  }
+  
+  .team-wrapper {
+    padding-bottom: 80px;
+    background-color: #f7f7f7;
+    text-align: center;
+    font-family: Tahoma, Geneva, sans-serif;
+  }
+  
+  .team-wrapper .container {
+  
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .team-wrapper .heading {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #5f5d60;
+  }
+  
+  .team-wrapper .heading h1 span {
+    font-weight: normal;
+  }
+  
+  .team-list .list {
+    background-color: rgba(0, 0, 0, 0.53);
+    width: 230px;
+    height: 280px;
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 5px;
+    text-align: center;
+    color: white;
+  }
+  .team-list .list img {
+    margin-top: 50px;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+  }
+  
+  .team-list .list:hover {
+    box-shadow: 0px 0px 25px 0px rgba(255, 255, 255, 0.836);
+  }
+  .team-list .list:hover span {
+    border-radius: 0;
+    top: -200px;
+  }
+  .team-list .list:hover span p {
+    color: white;
+    font-size: 14px;
+  }
+  .team-list .list:hover span h3 {
+    color: white;
+  }
+  
+  .team-list .list:hover span .text-wrapper {
+    bottom: 90px;
+    left: 0;
+    margin: 0 auto;
+    position: absolute;
+    right: 0;
+    width: 180px;
+    opacity: 1;
+  }
+  .team-list .list:hover .wrapper img {
+    display: none;
+  }
+  .team-list .list:hover h3 {
+    color: #2F7ABE;
+    margin-top: -100px;
+  }
+  .team-list .list .wrapper {
+    overflow: hidden;
+    position: absolute;
+    width: 230px;
+    height: 280px;
+  }
+  .team-list .list span {
+    display: block;
+    height: 500px;
+    left: -135px;
+    position: absolute;
+    top: -490px;
+    width: 500px;
+    background: linear-gradient(to right, #00cc66 0%, #009900 100%);
+  }
+  
+  .team-list .list h3 {
+    display: block;
+    font-style: normal;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 12px;
+    font-size: 28px;
+  }
+  
+  .team-list .transition {
+    transition: .5s cubic-bezier(.3, 0, 0, 1.3)
+  }
+  
+  .clear {
+    clear: left;
+  }
