edit responsive header

--- a/responsive.css
+++ b/responsive.css
@@ -7,8 +7,19 @@
   }
   
   /* Untuk Smartphone */
-  @media all and (max-width: 670px) {
+@media all and (max-width: 670px) {
     .list{
       margin-bottom:40px;
     }
+  
+  /* Tambahkan CSS untuk header-right */
+  .header-right{
+    display:none;
   }
+  
+  /* Tambahkan CSS untuk menu-icon */
+  .menu-icon{
+    display: block;
+  }
+  
+}
