--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,12 +9,16 @@
   }
   main{
     height: 500px;
+    background-image: url("assets/Background\ 2.png");
+    background-size: 700px 500px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   
   #header {
-      height: 70px;
+      height: 65px;
       width: 100%;
-      background-color: rgba(21, 180, 42, 0.9);
+      background-color: rgba(73, 89, 237, 1);
     }
   
   .header-left {
@@ -27,11 +31,10 @@
   }
   
   .logo {
-      width: 124px;
-      margin-top: 20px;
-      color: rgb(255, 255, 255);
-      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-      font-size: 20px;
+      width: 60px;
+      height: 70px;
+      padding-top: 10px;
+      padding-left: 10px;
   }
   
   .header-right a {
@@ -163,7 +166,7 @@
     position: absolute;
     top: -490px;
     width: 500px;
-    background: linear-gradient(to right, #00cc66 0%, #009900 100%);
+    background: linear-gradient(to right, rgb(87, 97, 185) 0%, #4959edff 100%);
   }
   
   .team-list .list h3 {
