--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-
+/* Start index.html*/
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -23,7 +23,6 @@ main{
 
 .content-aside{
   margin-top: 50px;
-  padding: ;
   height: 250px;
 }
 
@@ -213,3 +212,52 @@ footer {
   padding-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.8);
 }
+
+/* End index.html */
+
+/* Start login.html */
+
+.login {
+  display: flex;
+  height: 70vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 70%;
+}
+
+.form-input {
+  margin: 20px auto;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 50%;
+}
+
+.form-input .iconify {
+  padding: 10px;
+  color: #cccccc;
+  font-size: 50px;
+  position: absolute;
+  top: 18px;
+  left: 20px;
+}
+
+.form-input input {
+  font-family: 'Poppins';
+  width: 100%;
+  border: 2px solid #eeeeee;
+  padding: 20px 15px 20px 80px;
+  display: block;
+  font-size: 30px;
+  outline: none;
+  border-radius: 15px;
+}
+
+.form-input input:focus {
+  border: 2px solid #0779e4;
+}
+
+/* End login.html */
