--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,21 +9,40 @@ body {
 }
 
 main{
-  height: 500px;
-  background-image: url("assets/Background\ 2.png");
-  background-size: 800px 500px;
+  height: 600px;
+  background-image: url("https://prog-8.com/images/html/advanced/top_en.png");
+  background-size: cover;
+  color: white;
   background-repeat: no-repeat;
-  background-position: center;
+  /* background-position: center; */
 }
 
-.dts {
+/* .dts {
   margin-top: 90px;
   text-align: center;
-}
+  
+} */
 
 .content-aside{
-  margin-top: 50px;
-  height: 250px;
+  background-image: url("https://prog-8.com/images/html/advanced/top_en.png");
+  background-size: cover;
+  color: white;
+  padding: 100px 0 100px 0;
+  height: 400px;
+  text-align: center;
+  height: 500px;
+}
+
+.content-aside h1 {
+  opacity: 0.7;
+  font-size: 45px;
+  letter-spacing: 3px;
+  
+}
+
+.content-aside p {
+  opacity: 0.9;
+  font-size: 17px;
 }
 
 .container {
@@ -35,7 +54,7 @@ main{
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(73, 89, 237, 1);
+  background-color: rgba(73, 89, 237, 0.8);
   position: fixed;
   top: 0;
   z-index: 10;
@@ -46,12 +65,13 @@ header {
 }
 
 .header-left {
+  /* margin-left: -150px; */
   float: left;
 }
 
 .header-right {
   float: right;
-  margin-right: -25px;
+  margin-right: -150px;
 }
 
 .header-right a {
@@ -81,7 +101,7 @@ header {
 }
 
 .team-wrapper {
-  margin-top: 200px;
+  margin-top: 100px;
   padding-bottom: 50px;
   background-color: #f7f7f7;
   text-align: center;
@@ -207,7 +227,7 @@ footer p {
 footer {
   text-align:center;
   display: block;
-  margin-top: 500px;
+  margin-top: 100px;
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: rgba(0, 0, 0, 0.8);
@@ -261,3 +281,72 @@ footer {
 }
 
 /* End login.html */
+
+/* contact us */
+input[type=text]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=email]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=number]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  margin : 8px 0;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: white;
+  resize: none;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.contact {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.kontak h1 {
+  font-weight: normal;
+}
+/* end contct us */
