--- a/stylesheet.css
+++ b/stylesheet.css
@@ -243,7 +243,7 @@ footer {
   align-items: center;
 }
 
-.container {
+.login .container {
   width: 70%;
 }
 
@@ -343,6 +343,10 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+}
+
+.contact .container {
+  width: 70%;
 }
 
 .kontak h1 {
