--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ body {
 }
 
 main{
-  height: 600px;
+  height: 545px;
   background-image: url("https://prog-8.com/images/html/advanced/top_en.png");
   background-size: cover;
   color: white;
@@ -23,24 +23,25 @@ main{
   
 } */
 
-.content-aside{
+.content{
   background-image: url("https://prog-8.com/images/html/advanced/top_en.png");
   background-size: cover;
   color: white;
-  padding: 100px 0 100px 0;
+  padding: 50px 0 100px 0;
   height: 400px;
   text-align: center;
-  height: 500px;
+  height: 600px;
 }
 
-.content-aside h1 {
-  opacity: 0.7;
+
+.content h1 {
+  opacity: 0.93;
   font-size: 45px;
   letter-spacing: 3px;
-  
 }
 
-.content-aside p {
+.content p {
+  margin-top: 50px;
   opacity: 0.9;
   font-size: 17px;
 }
@@ -65,6 +66,7 @@ header {
 }
 
 .header-left {
+  /* margin-left: -150px; */
   float: left;
 }
 
@@ -100,9 +102,7 @@ header {
 }
 
 .team-wrapper {
-  margin-top: 100px;
-  padding-bottom: 50px;
-  background-color: #f7f7f7;
+  background-color: #f2f2f2;
   text-align: center;
   font-family: Tahoma, Geneva, sans-serif;
 }
@@ -214,28 +214,27 @@ header {
 }
 
 footer img {
-  width: 250px;
+  width: 200px;
 }
 
 footer p {
   color: #b3aeb5;
   font-size: 14px;
-  margin-bottom: 1px
+  margin-bottom: 0.5px
 }
 
 footer {
   text-align:center;
   display: block;
-  margin-top: 100px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 5px;
   background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* End index.html */
 
 /* Start login.html */
-
+/*
 .login {
   display: flex;
   height: 70vh;
@@ -278,11 +277,76 @@ footer {
 .form-input input:focus {
   border: 2px solid #0779e4;
 }
+*/
+
+.title_login{
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  letter-spacing: 2px;
+}
+ 
+.login_content{
+  color: black;
+  width: 30%;
+  background: white;
+  margin: auto;
+  margin-top: 50px;
+  padding: 10px;
+  border-radius: 5%;
+}
+ 
+label{
+  color: black;
+  font-size: 11pt;
+}
+ 
+.form_login{
+  display: inline-block;
+  box-sizing : border-box;
+  width: 100%;
+  padding: 10px;
+  font-size: 11pt;
+}
+ 
+.submit_login{
+  display: inline-block;
+  background: #24a0ed;
+  color: white;
+  font-size: 11pt;
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  padding-top: 10px 20px;
+}
+ 
+.back_login{
+  display: inline-block;
+  background: #f44336;
+  color: white;
+  font-size: 11pt;
+  width: 100%;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.login_content input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
 /* End login.html */
 
 /* contact us */
-input[type=text]{
+.contact input[type=text]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -292,7 +356,7 @@ input[type=text]{
   box-sizing: border-box;
 }
 
-input[type=email]{
+.contact input[type=email]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -302,7 +366,7 @@ input[type=email]{
   box-sizing: border-box;
 }
 
-input[type=number]{
+.contact input[type=number]{
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -312,7 +376,7 @@ input[type=number]{
   box-sizing: border-box;
 }
 
-input[type=submit] {
+.contact input[type=submit] {
   width: 100%;
   background-color: #4CAF50;
   color: white;
@@ -323,7 +387,7 @@ input[type=submit] {
   cursor: pointer;
 }
 
-textarea {
+.contact textarea {
   width: 100%;
   height: 150px;
   padding: 12px 20px;
@@ -335,21 +399,37 @@ textarea {
   resize: none;
 }
 
-input[type=submit]:hover {
+.contact input[type=submit]:hover {
   background-color: #45a049;
 }
 
 .contact {
+  border-top: 1px solid gray;
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 1px 20px 30px 20px;
 }
 
-.contact .container {
+.contact .container{
   width: 70%;
 }
 
 .kontak h1 {
   font-weight: normal;
 }
+
+
+#home{
+  background-color: #f2f2f2;
+  height: 65px;
+}
+#team{
+  background-color: #f2f2f2;
+  height: 65px;
+}
+#contact{
+  background-color: #f2f2f2;
+  height: 65px;
+}
+
 /* end contct us */
